# my_etls

./: .gitignore  Makefile  README.md  pyproject.toml
my_etls/extract/domain/: exceptions.py  parser.py  requester.py
my_etls/extract/infrascture/: http_requester.py  real_python_scrapping.py
my_etls/extract/infrascture/real_python/: real_python_scrapper.py
my_etls/extract/infrastructure/: http_requester.py
my_etls/extract/infrastructure/real_python/: real_python_parser.py  real_python_scraper.py
tests/: test_data.py
tests/extract/unit/: test_real_python_scrapping_extractor.py
tests/integration/infrastructure/real_python/: test_real_python_scraper.py
tests/unit/extract/infrastructure/real_python/: test_real_python_parser.py
