[project]
name = "my-etls"
version = "0.1.0"
description = ""
authors = [
    {name = "vmrodriguezm",email = "victorrodriguezmoreno@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "doublex (>=1.9.6.1,<2.0.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "expects (>=0.9.0,<0.10.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.4"

